--- a/创建元素dom操作.html
+++ b/创建元素dom操作.html
@@ -97,7 +97,7 @@
             par.appendChild(newEle);
         }
         else {
-            par.insertBefore(newEle, tarEle.nextSibling);
+            par.insertBefore(newEle, tarEle.nextSibling);  //下一个同级元素tarEle.nextSibling
 
         }
     }
