--- a/动画的js和jquery实现.html
+++ b/动画的js和jquery实现.html
@@ -18,6 +18,7 @@
             background: darkgreen;
             position: absolute;
             left: 600px;
+            top:500px;
         }
 
 
