--- a/表单.html
+++ b/表单.html
@@ -41,14 +41,12 @@
 
             margin-bottom: 14px;
         }
-
         #theForm .form div label {
             width: 30%;
             text-align: right;
             font-size: 1em;
             display: inline-block;
             vertical-align: top;
-
         }
 
         #theForm .form div input {
@@ -70,12 +68,17 @@
             cursor: pointer;
             position: relative;
             display: inline-block;
-            text-align: justify;
+            text-align: center;
             width: 100px;
             height: 40px;
             /*border: firebrick 1px solid;*/
             /*border-bottom: white 1px solid;*/
             z-index: 999;
+
+        }
+        .tab ul li:first-child{
+            border: black 1px solid;
+            border-bottom: white 1px solid;
         }
         .underForm{
             height: 200px;
