--- a/3DAniMa.html
+++ b/3DAniMa.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="jquery-3.3.1.min.js"> </script>
     <style>
         * {
             padding: 0;
@@ -17,6 +18,9 @@
             margin: 30px 0 30px 50px;
             list-style: none;
             text-align: center;
+            position: absolute;
+            left: 30px;
+            top: 20px;
         }
 
         #nav li {
@@ -54,7 +58,8 @@
         }
 
         #nav:hover li {
-            /*//鼠标放在ul时li都开始转*/
+            /*//鼠标放在ul时li都开始转
+            如果中间移开鼠标再次移上去会继续动画直到完成*/
             transform: rotateX(-90deg);
         }
 
@@ -296,6 +301,25 @@ document.addEventListener("touchstart",mouseDownLister);
 
         mode.style.transform = "rotateX("+tx1+"deg) rotateY("+tx2+"deg)";
     }
+    $("#nav").get(0).addEventListener("mousedown",function  down(ev) {
+        console.log("start");
+        var Sevent = ev||event;
+        var siteX = Sevent.clientX-$(this).get(0).offsetLeft;
+        $(this).get(0).addEventListener("mousemove",function move(ev1) {
+            var Mevent = ev1||event;
+            var nX = Mevent.clientX-siteX;
+            $(this).css("left",nX+"px");
+        }) ;
+        $(this).get(0).addEventListener("mouseup",function (ev2) {
+            var Mevent = ev2||event;
+            $(this).get(0).removeEventListener("mousedown","down");
+            $(this).get(0).removeEventListener("mousemove","move");
+            // var nX = Mevent.clientX-siteX;
+            // $(this).css("left",nX+"px");
+        }) ;
+        //Onclick mousedown等方法的末尾加上return false的话，只要你不抬起来移动时就不会选中别的标签文字
+        return false;
+    }) ;
 </script>
 </body>
 </html>
